codecov assemble fix

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,7 +46,7 @@ before_install:
   - yes | sdkmanager "platforms;android-${ANDROID_API_LEVEL}"
 
 before_script:
-  - ./gradlew assembleCodecov jacocoTestReport assembleAndroidTest
+  - ./gradlew assembleCodecov createCodecovCoverageReport assembleAndroidTest
   # Create and start emulator
   - echo no | android create avd --force -n test1 -t android-$ANDROID_API_LEVEL --abi $ANDROID_ABI
   - emulator -avd test1 -no-skin -no-audio -no-window &
