--- a/.travis.yml
+++ b/.travis.yml
@@ -55,5 +55,7 @@ before_script:
 
 script:
   - ./gradlew createCodecovCoverageReport
+  - ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
+
+after_success:
   - bash <(curl -s https://codecov.io/bash)
-  - ./gradlew clean connectedAndroidTest -PdisablePreDex --stacktrace
