--- a/.travis.yml
+++ b/.travis.yml
@@ -54,8 +54,8 @@ before_script:
   - adb -s emulator-5554 shell input keyevent 82 &
 
 script:
-  - ./gradlew createCodecovCoverageReport
-  - ./gradlew connectedAndroidTest -PdisablePreDex --stacktrace
+  - ./gradlew connectedCheck
+  - ./gradlew clean connectedAndroidTest -PdisablePreDex --stacktrace
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
