--- a/elkag/build.gradle
+++ b/elkag/build.gradle
@@ -2,9 +2,10 @@ buildscript {
     repositories {
         mavenCentral()
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
     }
 }
 apply plugin: 'com.android.library'
@@ -12,24 +13,34 @@ apply plugin: 'com.android.library'
 repositories {
     mavenCentral()
     jcenter()
+    maven { url 'https://maven.google.com' }
 }
 
 dependencies {
-    compile 'me.ilich:juggler:0.1.20'
-    compile 'com.android.support:support-v4:24.+'
-    compile 'com.android.support:appcompat-v7:24.+'
+    compile 'me.ilich:juggler:0.1.22'
+    compile 'com.android.support:support-v4:27.0.2'
+    compile 'com.android.support:appcompat-v7:27.0.2'
 //    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.android.gms:play-services-gcm:11.0.4'
-    compile 'com.jakewharton:butterknife:8.2.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.2.1'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile fileTree(dir: 'libs', include: '*.jar')
     compile 'com.google.code.gson:gson:2.8.1'
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 27
+    buildToolsVersion '27.0.3'
     useLibrary 'org.apache.http.legacy'
+
+    buildTypes {
+
+        customer {
+        }
+
+        codecov {
+        }
+    }
 
     defaultConfig {
         minSdkVersion 15
