--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ dist: precise
 env:
   global:
     - ANDROID_API_LEVEL=21
-    - ANDROID_APP_BUILD_TOOLS_VERSION=25.0.3
-    - ANDROID_ELK_BUILD_TOOLS_VERSION=25.0.0
+    - ANDROID_APP_BUILD_TOOLS_VERSION=27.0.3
+    - ANDROID_ELK_BUILD_TOOLS_VERSION=27.0.3
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
     - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
@@ -29,7 +29,7 @@ android:
   components:
     - tools # to get the new `repository-11.xml`
     - platform-tools
-    - tools # to install Android SDK tools 25.1.x
+    - tools # to install Android SDK tools 27.x
     - build-tools-$ANDROID_APP_BUILD_TOOLS_VERSION
     - build-tools-$ANDROID_ELK_BUILD_TOOLS_VERSION
     - android-$ANDROID_API_LEVEL
@@ -43,6 +43,7 @@ android:
 
 before_install:
   - yes | sdkmanager "platforms;android-25"
+  - yes | sdkmanager "platforms;android-27"
   - yes | sdkmanager "platforms;android-${ANDROID_API_LEVEL}"
 
 before_script:
