--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ android:
     - extra-android-m2repository
     # Specify at least one system image
     - sys-img-armeabi-v7a-android-$ANDROID_API_LEVEL
+    - extra
   licenses:
     - android-sdk-preview-license-.+
     - android-sdk-license-.+
