--- a/elkag/build.gradle
+++ b/elkag/build.gradle
@@ -18,14 +18,14 @@ repositories {
 
 dependencies {
     compile 'me.ilich:juggler:0.1.22'
-    compile 'com.android.support:support-v4:27.0.2'
-    compile 'com.android.support:appcompat-v7:27.0.2'
+    implementation 'com.android.support:support-v4:27.0.2'
+    implementation 'com.android.support:appcompat-v7:27.0.2'
 //    compile 'com.google.android.gms:play-services:7.5.0'
-    compile 'com.google.android.gms:play-services-gcm:11.0.4'
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.google.android.gms:play-services-gcm:11.0.4'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile fileTree(dir: 'libs', include: '*.jar')
-    compile 'com.google.code.gson:gson:2.8.1'
+    implementation 'com.google.code.gson:gson:2.8.1'
 }
 
 android {
