--- a/app/build.gradle
+++ b/app/build.gradle
@@ -172,8 +172,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.android.support:recyclerview-v7:27.0.2'
     implementation 'com.android.support:gridlayout-v7:27.0.2'
-    implementation 'com.google.android.gms:play-services-location:11.0.4'
-    implementation 'com.google.android.gms:play-services-analytics:11.0.4'
+    implementation 'com.google.android.gms:play-services-location:11.8.0'
+    implementation 'com.google.android.gms:play-services-analytics:11.8.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     annotationProcessor 'com.android.databinding:compiler:2.3.0'
     implementation 'com.googlecode.libphonenumber:libphonenumber:7.4.3'
@@ -192,7 +192,7 @@ dependencies {
     implementation 'com.vk:androidsdk:1.6.7'
     implementation 'com.facebook.android:facebook-android-sdk:4.31.0'
     implementation 'ru.ok:odnoklassniki-android-sdk:2.0.8'
-    implementation 'com.google.android.gms:play-services-auth:11.0.4'
+    implementation 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.squareup.okhttp3:okhttp:3.9.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     //
@@ -214,4 +214,6 @@ dependencies {
     implementation 'pub.devrel:easypermissions:0.4.2'
     implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
+
+    implementation 'com.google.android.gms:play-services-gcm:11.8.0'
 }
