--- a/app/build.gradle
+++ b/app/build.gradle
@@ -161,7 +161,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testCompile 'junit:junit:4.12'
-    implementation project(':elkag')
+//    implementation project(':elkag')
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation 'com.android.support:multidex:1.0.1'
@@ -216,4 +216,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 
     implementation 'com.google.android.gms:play-services-gcm:11.8.0'
+    implementation 'me.ilich:juggler:0.1.22'
 }
