--- a/app/build.gradle
+++ b/app/build.gradle
@@ -201,10 +201,10 @@ def compileRXAndRetrofit() {
 
 def compileTests() {
     dependencies {
-        androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
             exclude group: 'com.android.support', module: 'support-annotations'
         })
-        testCompile 'junit:junit:4.12'
+        testImplementation 'junit:junit:4.12'
     }
 }
 
