--- a/app/build.gradle
+++ b/app/build.gradle
@@ -218,8 +218,8 @@ def compileUtils() {
         implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
         implementation 'pub.devrel:easypermissions:1.2.0'
         implementation 'com.firebase:firebase-jobdispatcher-with-gcm-dep:0.7.0'
-        implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
-        annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
+        implementation 'com.github.bumptech.glide:glide:4.7.1'
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
     }
 }
 
